--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-:root {
+/* :root {
+  position: relative;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 500;
@@ -6,7 +7,16 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* cursor: url('./assets/cursor.png'), auto; */
+/* } */ 
+
+body, html, #root {
+  position: relative;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
+
 /* 
 a {
   font-weight: 500;
@@ -60,4 +70,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */ 
+} */
+
+/* .tools-container {
+  cursor: default !important;
+} */
