--- a/src/components/Tools/Move/MoveTool.css
+++ b/src/components/Tools/Move/MoveTool.css
@@ -63,3 +63,8 @@
   color: inherit !important;
   cursor: default;
 }
+
+/* .cursor-move-tool {
+  cursor: url('/cursor.png') 16 16 !important;
+} */
+
