--- a/src/components/Panel/LeftPanel/LeftPanel.css
+++ b/src/components/Panel/LeftPanel/LeftPanel.css
@@ -135,7 +135,7 @@
   margin-top: -2px;
   opacity: 0;
   transition: opacity 0.2s ease;
-  pointer-events: none; /* ensures the icon doesn't interfere with hover */
+  pointer-events: none; 
 }
 
 .left-section-title:hover .arrow-icon {
@@ -151,12 +151,127 @@
 .left-header-divider {
   position: relative;
   height: 1px;
-  /* width: 100vh; */
   background-color: #e0e0e0;
-   /* force full width ignoring parent padding */
   margin-left: -20px;
   margin-right: -20px;
 }
+
+
+/* Toggle Icon when Left Panel is not Collapsed  */
+.toggle-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  margin: 16px 14px 0 auto;
+  padding: 6px 8px;
+  border-radius: 8px; 
+  transition: background-color 0.2s ease;
+} 
+
+.toggle-wrapper:hover{
+  background-color: rgba(0, 0, 0, 0.08);
+}
+
+.toggle-icon {
+  width: 24px;
+  height: 24px;
+  display: block;
+  position: absolute;
+  padding: 8px 10px;
+  transition: background 0.2s;
+  user-select: none;
+  -webkit-user-drag: none;
+  z-index: 2;
+}
+
+.left-toggle {
+  visibility: hidden;
+  opacity: 0;
+  background: #222;
+  color: #fff;
+  padding: 8px 14px;
+  border-radius: 10px;
+  font-size: 12px;
+  position: absolute;
+  top: 115%;
+  right: -350%;
+  white-space: nowrap;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  z-index: 10;
+}
+
+.toggle-wrapper:hover .left-toggle {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0.6s;
+} 
+
+/* Collapsed Toogle Menu */
+.toggle-container {
+  position: fixed;
+  top: 18px;
+  left: 18px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 4px 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  border: 1px solid #e0e0e0;
+  z-index: 200;
+}
+
+.toggle-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 6px;
+  transition: background-color 0.2s ease;
+}
+
+.toggle-left img {
+  width: 24px;
+  height: 24px;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
+.toggle-left:hover {
+  background-color: rgba(0,0,0,0.08);
+}
+
+.left-toggle-tooltip {
+  position: absolute;
+  top: 110%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #222;
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 6px;
+  font-size: 12px;
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  z-index: 100;
+  margin-left: 70px;
+}
+
+
+.toggle-left:hover + .left-toggle-tooltip {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0.6s;
+}
+
 
 /* Scroll only inside this */
 .assets-scroll {
@@ -169,7 +284,7 @@
 }
 
 .assets-scroll:hover {
-  overflow-y: auto; /* show scrollbar on hover */
+  overflow-y: auto; 
 }
 
 .assets-list {
@@ -207,8 +322,5 @@
 }
 
 .assets-scroll::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 0, 0.25); /* slightly darker on hover */
+  background-color: rgba(0, 0, 0, 0.25); 
 }
-
-
-
