--- a/src/components/Panel/LeftPanel/LeftPanel.css
+++ b/src/components/Panel/LeftPanel/LeftPanel.css
@@ -6,7 +6,7 @@
   background-color: #ffffff;
   border-right: 2px solid #e0e0e0;
   transition: all 0.3s ease;
-  /* box-sizing: border-box; */
+  
   flex-direction: column; 
 }  
 
@@ -72,10 +72,8 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  height: 100%;
-  overflow-y: hidden;
   padding: 18px; 
-  height: 100%;
+  height: 100vh;
   user-select: none;
   -webkit-user-drag: none;
 }
@@ -210,81 +208,29 @@
   transition-delay: 0.6s;
 } 
 
-/* Collapsed Toogle Menu */
-.toggle-container {
-  position: fixed;
-  top: 18px;
-  left: 18px;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 4px 5px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-  border: 1px solid #e0e0e0;
-  z-index: 200;
-}
-
-.toggle-left {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 32px;
-  height: 32px;
-  border-radius: 6px;
-  transition: background-color 0.2s ease;
-}
-
-.toggle-left img {
-  width: 24px;
-  height: 24px;
-  user-select: none;
-  -webkit-user-drag: none;
-}
-
-.toggle-left:hover {
-  background-color: rgba(0,0,0,0.08);
-}
-
-.left-toggle-tooltip {
-  position: absolute;
-  top: 110%;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #222;
-  color: #fff;
-  padding: 6px 10px;
-  border-radius: 6px;
-  font-size: 12px;
-  white-space: nowrap;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
-  z-index: 100;
-  margin-left: 70px;
-}
-
-
-.toggle-left:hover + .left-toggle-tooltip {
-  visibility: visible;
-  opacity: 1;
-  transition-delay: 0.6s;
-}
-
-
 /* Scroll only inside this */
 .assets-scroll {
   flex-grow: 1;
   overflow-y: hidden;
   padding: 10px 12px 0;
   margin-top: 8px;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
+  
   max-height: calc(100vh - 200px);
+  transition: max-height 0.3s ease-out;
+  min-height: 0;
 }
 
 .assets-scroll:hover {
   overflow-y: auto; 
+}
+
+.assets-scroll.hidden {
+  max-height: 0; /* Collapse state */
+  padding-top: 0; /* Remove top padding when collapsed */
+  padding-bottom: 0; /* Remove bottom padding when collapsed */
+  margin-top: 0; /* Adjust margin if needed */
+  overflow-y: hidden !important;
 }
 
 .assets-list {
@@ -318,7 +264,7 @@
 .assets-scroll::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.15); /* subtle dark gray */
   border-radius: 10px;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
 }
 
 .assets-scroll::-webkit-scrollbar-thumb:hover {
