--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -40,6 +40,67 @@
   z-index: 1000;
 }
 
+/* Collapsed Toogle Menu */
+.toggle-container {
+  position: fixed;
+  top: 18px;
+  left: 18px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 4px 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  border: 1px solid #e0e0e0;
+  z-index: 200;
+}
+
+.toggle-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 6px;
+  transition: background-color 0.2s ease;
+}
+
+.toggle-left img {
+  width: 24px;
+  height: 24px;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
+.toggle-left:hover {
+  background-color: rgba(0,0,0,0.08);
+}
+
+.left-toggle-tooltip {
+  position: absolute;
+  top: 110%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #222;
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 6px;
+  font-size: 12px;
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  z-index: 100;
+  margin-left: 70px;
+}
+
+
+.toggle-left:hover + .left-toggle-tooltip {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0.6s;
+}
 
 
 
