--- a/src/components/Panel/RightPanel/RightPanel.css
+++ b/src/components/Panel/RightPanel/RightPanel.css
@@ -120,7 +120,7 @@
 }
 
 .pos-box input {
-  margin-left: 2px;
+  margin-left: 8px;
   width: 40px;
   border: none;
   background: none;
@@ -133,10 +133,17 @@
   appearance: textfield;
   -moz-appearance: textfield;
   -webkit-appearance: none;
-  position: relative;
-  left: -4px;
-  right: -2px;
+  position: static;
+  height: 24px;
   user-select: none;
+  vertical-align: middle;
+}
+
+.pos-box img {
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .pos-box input:focus {
