--- a/src/components/Panel/LeftPanel/LeftPanel.css
+++ b/src/components/Panel/LeftPanel/LeftPanel.css
@@ -174,8 +174,8 @@
 }
 
 .toggle-icon {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   display: block;
   position: absolute;
   padding: 8px 10px;
@@ -212,8 +212,9 @@
 .assets-scroll {
   flex-grow: 1;
   overflow-y: hidden;
-  padding: 10px 12px 0;
+  padding: 0;
   margin-top: 8px;
+  
   /* scroll-behavior: smooth; */
   
   max-height: calc(100vh - 200px);
@@ -242,7 +243,7 @@
 
 .assets-list li {
   font-size: 13px;
-  padding: 6px 0;
+  padding: 7px 0;
   color: #333;
   white-space: nowrap;
   overflow: hidden;
