--- a/src/components/Panel/RightPanel/RightPanel.css
+++ b/src/components/Panel/RightPanel/RightPanel.css
@@ -59,8 +59,8 @@
   background: #e0e0e0;
   /* margin: 20px -18px;
   margin-top: 18px 0 -18px; */
-  width: calc(100% + 20px);  /* Extend beyond padding */
-  margin-left: -18px;        /* Align with full panel left edge */
+  width: calc(100% + 20px); /* Extend beyond padding */
+  margin-left: -18px; /* Align with full panel left edge */
   margin-right: 0;
   margin-top: 20px;
   margin-bottom: 0;
@@ -91,24 +91,54 @@
 
 .pos-box {
   flex: 1;
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #ededed;
+  background-color: #e0e0e0;
   border-radius: 10px;
   padding: 7px 12px;
   font-weight: bold;
   font-size: 12px;
   gap: 2px;
   transition: box-shadow 0.2s, border 0.2s;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   user-select: none;
+}
+
+/* Tooltip styling */
+.pos-box .tooltip {
+  visibility: hidden;
+  opacity: 0;
+  background: #222;
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 10px;
+  font-size: 10px;
+  position: absolute;
+  transform: translateY(270%);
+  left: 18%;
+  white-space: nowrap;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  z-index: 10;
+}
+
+/* Show tooltip and border on hover */
+.pos-box:hover {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+.pos-box:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
 }
 
 .pos-box.active,
 .pos-box:focus-within,
 .pos-box:active {
-  border: 2px solid #2196f3;
+  border: 1px solid #2196f3;
   /* box-shadow: 0 0 0 2px #90caf9; */
   /* background-color: #ddd; */
 }
@@ -118,6 +148,12 @@
   font-size: 10px;
   margin-right: 6px;
 }
+
+.pos-box.selected-pos {
+  border: 1px solid #3b82f6; /* blue border */
+  /* border-radius: 6px; */
+}
+
 
 .pos-box input {
   margin-left: 8px;
@@ -151,20 +187,60 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #ededed;
+  background-color: #e0e0e0;
   border-radius: 10px;
-  padding: 7px 12px;
+  padding: 4px 10px;
   font-weight: bold;
   font-size: 12px;
-  gap: 2px;
+  gap: 9px;
   transition: box-shadow 0.2s, border 0.2s;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   user-select: none;
 }
 
-/* .pos-box input:focus {
-  background: #8dccf9;
-} */
+.icon-button {
+  background: none;
+  position: relative;
+  border: none;
+  padding: 4px;
+  border-radius: 5px;
+  transition: background-color 0.2s ease;
+}
+
+.icon-button img {
+  width: 12px;
+  height: 12px;
+  display: block;
+}
+
+.icon-button:hover {
+  background-color: #ababab;
+}
+
+/* Tooltip styling inside icon-button */
+.icon-button .tooltip {
+  visibility: hidden;
+  opacity: 0;
+  background: #222;
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 10px;
+  font-size: 10px;
+  position: absolute;
+  transform: translatex(-50%);
+  bottom: -35px;
+  left: 18%;
+  white-space: nowrap;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  z-index: 100;
+}
+
+/* Show tooltip on hover */
+.icon-button:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
 
 .pos-box-fill {
   display: flex;
@@ -173,11 +249,17 @@
   background-color: #ededed;
   border-radius: 10px;
   /* padding: 8px 15px 8px; */
-  padding: 8px 12px;
+  padding: 7px 12px;
   width: 100%;
   font-weight: bold;
   font-size: 12px;
   gap: 2px;
+  transition: box-shadow 0.2s, border 0.2s;
+}
+
+.pos-box-fill:hover {
+  border: 1px solid #ccc;
+  border-radius: 10px;
 }
 
 .pos-box-fill input {
