--- a/src/components/Panel/RightPanel/RightPanel.css
+++ b/src/components/Panel/RightPanel/RightPanel.css
@@ -227,7 +227,7 @@
   border-radius: 10px;
   font-size: 10px;
   position: absolute;
-  transform: translatex(-50%);
+  transform: translateX(-50%);
   bottom: -35px;
   left: 18%;
   white-space: nowrap;
@@ -249,7 +249,7 @@
   background-color: #ededed;
   border-radius: 10px;
   /* padding: 8px 15px 8px; */
-  padding: 7px 12px;
+  padding: 7px 10px;
   width: 100%;
   font-weight: bold;
   font-size: 12px;
